big parts of problem 1 -- df, means, as.numeric

--- a/p8105_hw1_ajg2202.Rmd
+++ b/p8105_hw1_ajg2202.Rmd
@@ -6,3 +6,44 @@ output: github_document
 
 This is my solution to HW1.
 
+```{r}
+library(tidyverse)
+```
+
+
+## Problem 1
+
+Create a data frame with the specified elements. 
+
+```{r}
+prob1_df = 
+  tibble(
+    samp = rnorm(10),
+    samp_gt_0 = samp > 0,
+    char_vec = c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j"),
+    factor_vec = factor(c("low", "low", "low", "mod", "mod", "mod", "mod", "high", "high", "high"))
+  )
+```
+
+Take the mean of each variable in my data frame.
+
+```{r}
+mean(pull(prob1_df, samp))
+mean(pull(prob1_df, samp_gt_0))
+mean(pull(prob1_df, char_vec))
+mean(pull(prob1_df, factor_vec))
+```
+
+I can take the mean of numbers and logical but not character or factor. 
+
+```{r}
+as.numeric(pull(prob1_df, samp))
+as.numeric(pull(prob1_df, samp_gt_0))
+as.numeric(pull(prob1_df, char_vec))
+as.numeric(pull(prob1_df, factor_vec))
+```
+
+
+
+
+## Problem 2
