--- a/p8105_hw1_ajg2202.md
+++ b/p8105_hw1_ajg2202.md
@@ -2,4 +2,99 @@ Homework 1
 ================
 Jeff Goldsmith
 
-This is my solution to HW1.
+This is my solution to
+    HW1.
+
+``` r
+library(tidyverse)
+```
+
+    ## ── Attaching packages ─────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
+
+    ## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
+    ## ✓ tibble  3.0.1     ✓ dplyr   1.0.2
+    ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
+    ## ✓ readr   1.3.1     ✓ forcats 0.5.0
+
+    ## ── Conflicts ────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+## Problem 1
+
+Create a data frame with the specified elements.
+
+``` r
+prob1_df = 
+  tibble(
+    samp = rnorm(10),
+    samp_gt_0 = samp > 0,
+    char_vec = c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j"),
+    factor_vec = factor(c("low", "low", "low", "mod", "mod", "mod", "mod", "high", "high", "high"))
+  )
+```
+
+Take the mean of each variable in my data
+    frame.
+
+``` r
+mean(pull(prob1_df, samp))
+```
+
+    ## [1] 0.04697892
+
+``` r
+mean(pull(prob1_df, samp_gt_0))
+```
+
+    ## [1] 0.6
+
+``` r
+mean(pull(prob1_df, char_vec))
+```
+
+    ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(prob1_df, factor_vec))
+```
+
+    ## Warning in mean.default(pull(prob1_df, factor_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+I can take the mean of numbers and logical but not character or
+    factor.
+
+``` r
+as.numeric(pull(prob1_df, samp))
+```
+
+    ##  [1] -0.6010273  0.4034430 -0.7308272  1.2158929 -0.9046070  0.4894107
+    ##  [7] -0.5477466  0.3822193  0.1006576  0.6623737
+
+``` r
+as.numeric(pull(prob1_df, samp_gt_0))
+```
+
+    ##  [1] 0 1 0 1 0 1 0 1 1 1
+
+``` r
+as.numeric(pull(prob1_df, char_vec))
+```
+
+    ## Warning: NAs introduced by coercion
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(pull(prob1_df, factor_vec))
+```
+
+    ##  [1] 2 2 2 3 3 3 3 1 1 1
+
+## Problem 2
