small example of extracting variables

--- a/p8105_hw1_ajg2202.Rmd
+++ b/p8105_hw1_ajg2202.Rmd
@@ -15,7 +15,7 @@ library(tidyverse)
 
 Create a data frame with the specified elements. 
 
-```{r}
+```{r create_df}
 prob1_df = 
   tibble(
     samp = rnorm(10),
@@ -27,7 +27,7 @@ prob1_df =
 
 Take the mean of each variable in my data frame.
 
-```{r}
+```{r mean_pull_var}
 mean(pull(prob1_df, samp))
 mean(pull(prob1_df, samp_gt_0))
 mean(pull(prob1_df, char_vec))
@@ -36,14 +36,27 @@ mean(pull(prob1_df, factor_vec))
 
 I can take the mean of numbers and logical but not character or factor. 
 
-```{r}
+```{r try_numeric}
 as.numeric(pull(prob1_df, samp))
 as.numeric(pull(prob1_df, samp_gt_0))
 as.numeric(pull(prob1_df, char_vec))
 as.numeric(pull(prob1_df, factor_vec))
 ```
 
+```{r}
+as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
 
+
+why don't i like `$`
+
+```{r no_dollars}
+prob1_df$samp
+
+pull(prob1_df, samp)
+
+prob1_df[["samp"]]
+```
 
 
 ## Problem 2
