--- a/p8105_hw1_ajg2202.md
+++ b/p8105_hw1_ajg2202.md
@@ -41,13 +41,13 @@ Take the mean of each variable in my data
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.04697892
+    ## [1] -0.2271993
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.6
+    ## [1] 0.5
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -74,14 +74,14 @@ I can take the mean of numbers and logical but not character or
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1] -0.6010273  0.4034430 -0.7308272  1.2158929 -0.9046070  0.4894107
-    ##  [7] -0.5477466  0.3822193  0.1006576  0.6623737
+    ##  [1] -1.5895015 -1.1887124  0.1937960 -1.2579052  0.9946091 -0.3555596
+    ##  [7]  0.6774789 -0.1776465  0.1958378  0.2356107
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 0 1 0 1 0 1 0 1 1 1
+    ##  [1] 0 0 1 0 1 0 1 0 1 1
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -96,5 +96,36 @@ as.numeric(pull(prob1_df, factor_vec))
 ```
 
     ##  [1] 2 2 2 3 3 3 3 1 1 1
+
+``` r
+as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
+
+    ##  [1] 0.0000000 0.0000000 0.1937960 0.0000000 0.9946091 0.0000000 0.6774789
+    ##  [8] 0.0000000 0.1958378 0.2356107
+
+why don’t i like
+    `$`
+
+``` r
+prob1_df$samp
+```
+
+    ##  [1] -1.5895015 -1.1887124  0.1937960 -1.2579052  0.9946091 -0.3555596
+    ##  [7]  0.6774789 -0.1776465  0.1958378  0.2356107
+
+``` r
+pull(prob1_df, samp)
+```
+
+    ##  [1] -1.5895015 -1.1887124  0.1937960 -1.2579052  0.9946091 -0.3555596
+    ##  [7]  0.6774789 -0.1776465  0.1958378  0.2356107
+
+``` r
+prob1_df[["samp"]]
+```
+
+    ##  [1] -1.5895015 -1.1887124  0.1937960 -1.2579052  0.9946091 -0.3555596
+    ##  [7]  0.6774789 -0.1776465  0.1958378  0.2356107
 
 ## Problem 2
